--- a/security/bypass/src/main/adoc/modules/bypass/partials/module-nav.adoc
+++ b/security/bypass/src/main/adoc/modules/bypass/partials/module-nav.adoc
@@ -1,5 +1,5 @@
 
 
 
-* xref:security:bypass:about.adoc[Bypass Implementation]
+* xref:security:bypass:about.adoc[Bypass (Authenticator & Authorizor)]
 
