--- a/extensions/vro/cors/adoc/modules/cors/pages/about.adoc
+++ b/extensions/vro/cors/adoc/modules/cors/pages/about.adoc
@@ -2,6 +2,55 @@
 
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-WARNING: TODO
 
-//For more about CORS, see for example link:https://www.moesif.com/blog/technical/cors/Authoritative-Guide-to-CORS-Cross-Origin-Resource-Sharing-for-REST-APIs/#how-is-origin-definedhttps://www.moesif.com/blog/technical/cors/Authoritative-Guide-to-CORS-Cross-Origin-Resource-Sharing-for-REST-APIs/#how-is-origin-defined[this blog post at www.moesif.com]
+This extension configures specified CORS headers for the endpoints exposed by the xref:vro:ROOT:about.adoc[].
+
+To learn more about CORS, see for example link:https://www.moesif.com/blog/technical/cors/Authoritative-Guide-to-CORS-Cross-Origin-Resource-Sharing-for-REST-APIs/#how-is-origin-definedhttps://www.moesif.com/blog/technical/cors/Authoritative-Guide-to-CORS-Cross-Origin-Resource-Sharing-for-REST-APIs/#how-is-origin-defined[this blog post at www.moesif.com]
+
+
+== Configuration
+
+Add the following dependency:
+
+[source,xml]
+.pom.xml
+----
+<dependency>
+    <groupId>org.apache.isis.extensions</groupId>
+    <artifactId>isis-extensions-cors-impl</artifactId>
+</dependency>
+----
+
+Also add the following module to your `AppManifest`:
+
+[source,java]
+.AppManifest.java
+----
+@Configuration
+@Import({
+        IsisModuleExtCors.class,
+        ...
+})
+public class AppManifest {
+}
+----
+
+Update the configuration properties:
+
+[source,yml]
+.application.yml
+----
+isis:
+    extensions:
+        cors:
+            allow-credentials: ...  # <.>
+            allow-headers: ...      # <.>
+            allow-methods: ...      # <.>
+            allow-origins: ...      # <.>
+            exposed-headers: ...    # <.>
+----
+<.> xref:refguide:config:sections/isis.extensions.adoc#isis.extensions.cors.allow-credentials[isis.extensions.cors.allow-credentials]
+<.> xref:refguide:config:sections/isis.extensions.adoc#isis.extensions.cors.allowed-headers[isis.extensions.cors.allow-headers]
+<.> xref:refguide:config:sections/isis.extensions.adoc#isis.extensions.cors.allowed-methods[isis.extensions.cors.allow-methods]
+<.> xref:refguide:config:sections/isis.extensions.adoc#isis.extensions.cors.allowed-origins[isis.extensions.cors.allow-origins]
+<.> xref:refguide:config:sections/isis.extensions.adoc#isis.extensions.cors.exposed-headers[isis.extensions.cors.exposed-headers]
