--- a/extensions/vw/fullcalendar/adoc/modules/fullcalendar/pages/about.adoc
+++ b/extensions/vw/fullcalendar/adoc/modules/fullcalendar/pages/about.adoc
@@ -1,5 +1,45 @@
-= Fullcalendar
+= Full Calendar
 
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-WARNING: TODO
+The Full Calendar module integrates with the xref:vw:ROOT:about.adoc[Wicket Viewer], rendering any collection of domain objects that expose a date to be rendered in a calendar view (using the link:https://fullcalendar.io/[fullcalendar] javascript library).
+
+
+== Applib
+
+[WARNING]
+====
+TODO: v2 - to write up...
+
+need to reference implement either `Calendarable` or `CalandarEventable` in the applib.
+====
+
+== Usage
+
+To configure the extension:
+
+* include the dependency:
++
+[source,xml]
+.pom.xml
+----
+<dependency>
+    <groupId>org.apache.isis.extensions</groupId>
+    <artifactId>isis-extensions-fullcalendar-wicket-ui</artifactId>
+</dependency>
+----
+
+* update the `AppManifest`:
++
+[source,java]
+.AppManifest.java
+----
+@Configuration
+@Import({
+        IsisModuleExtFullCalendarWicketUi.class,  // <.>
+        ...
+})
+public class AppManifest {
+}
+----
+
