ISIS-2965: updates release procedure

--- a/antora/components/comguide/modules/ROOT/pages/cutting-a-release.adoc
+++ b/antora/components/comguide/modules/ROOT/pages/cutting-a-release.adoc
@@ -358,30 +358,24 @@ git clean -dfx ..
 Since the `<version>` has already been updated, we just use `mvn deploy` to upload the artifacts.
 We activate the (inherited) `apache-release` profile to bring in the `gpg` plugin for code signing.
 
+[WARNING]
+====
+make sure that the version of `gpg` on the `$PATH` is correct.
+
+I hit issues running on Windows under git-bash, as I was picking up git's version of gpg in `/usr/bin/gpg`.
+I sorted the issue eventually by running under Powershell, to pick up my gpg4Win.
+====
+
 The build creates a zip of the directory, so before executing the release we remove any other files.
 
 Still in the `bom` directory, we deploy (upload the artifacts) using:
 
 [source,bash,subs="attributes+"]
 ----
-mvn deploy \
-    -Dapache-release \
-    -Dgit \
-    -Dmaven.javadoc.skip=true    #<.>
+mvn deploy -Dapache-release -Dgit
 ----
-<.> generation of Javadoc is broken as of 2.0.0-M6; see note below.
 
-When prompted, enter your GPG passphrase.
-(Or, it might be sufficient to add just `-Dgpg.passphrase="..."`)
-
-[WARNING]
-.javadoc generation
-====
-As of 2.0.0-M6 javadoc generation is broken, due to link:https://issues.apache.org/jira/browse/MJAVADOC-586[MJAVADOC-586].
-
-Fixing the issue requires performing the build using a more recent version of the JDK than JDK11.
-However, this in turn requires module paths to be properly fixed; see link:https://issues.apache.org/jira/browse/ISIS-2841[ISIS-2841] for some ideas.
-====
+When prompted, enter your GPG passphrase (unless configured in `~/mvn/settings.xml` as the `gpg.passphrase` property)
 
 
 
@@ -400,7 +394,7 @@ git tag $ISISART-$ISISREL-$ISISRC
 
 The `mvn deploy` commands will have uploaded all of the release artifacts into a newly created staging repository on the ASF Nexus repository server.
 
-Log onto http://repository.apache.org[repository.apache.org] (using your ASF LDAP account):
+Log onto https://repository.apache.org[repository.apache.org] (using your ASF LDAP account):
 
 image::release-process/nexus-staging-0.png[width="600px"]
 
@@ -448,17 +442,12 @@ See xref:comguide:ROOT:key-generation.adoc[Key Generation] for more details.
 At the <<bump-code-to-isisrel,beginning>> of the release process we bumped the version to the release version, ie `$ISISREL`.
 With the release now deployed we now need to reset the revision back down to the base snapshot, ie `2.0.0-SNAPSHOT`.
 
-[NOTE]
-====
-Bumping back to `2.0.0-SNAPSHOT` (rather than the next development snapshot) simplifies CI/CD scripts for teams that want to building Apache Isis from source using git submodules.
-====
-
-Therefore (still in the `bom` directory):
+Therefore, still in the `bom` directory:
 
 [source,bash,subs="attributes+"]
 ----
 mvn versions:set -DnewVersion=2.0.0-SNAPSHOT
-mvn install -DskipTests -o -Dreleased
+mvn install -DskipTests -o -T1C -Dgithub
 
 pushd ../starters
 mvn versions:set -DnewVersion=2.0.0-SNAPSHOT
